# NullBatlle

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  NullBattle.cpp  NullBattle.h  README.md
common/: LogQueue.cpp  UuidV4.cpp  pokemon_print_helpers.cpp  pokemon_print_helpers.hpp
core/: CMakeLists.txt
core/battle/: BattleAction.hpp  BattleState.hpp  BattleStateMachine.cpp  BattleStateMachine.hpp  ConditionEngine.cpp  ConditionEngine.hpp  TurnEngine.cpp  TurnEngine.hpp
core/models/: Bag.hpp  Item.hpp  Move.hpp  Player.hpp  Pokemon.hpp  Team.hpp  Types.hpp  Weather.hpp
data/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  moves.json
data/models/: LearnsetEntry.hpp  PokemonTemplate.hpp
python/: fetch_pokemon.py
python/data/: pokemon.json  typechart.json
